@@ -1,3 +1,13 @@
+2011-08-26  Sam Weinig  <sam@webkit.org>
+
+        Fold _webkit_initWithDomain into _webkit_errorWithDomain in WebKit2
+        https://bugs.webkit.org/show_bug.cgi?id=67063
+
+        Reviewed by Anders Carlsson.
+
+        * WebProcess/WebCoreSupport/mac/WebErrorsMac.mm:
+        (+[NSError _webkit_errorWithDomain:code:URL:]):
+
 2011-08-26  Anders Carlsson  <andersca@apple.com>
 
         Implement NPN_ScheduleTimer/NPN_UnscheduleTimer
